--- a/tests/integration/data/asr4_streaming_config_en-us.toml
+++ b/tests/integration/data/asr4_streaming_config_en-us.toml
@@ -1,6 +1,8 @@
 [global]
 language = "en-US"
 workers = 0
+listeners = 1
+servers = 1
 decoding_type = "LOCAL"
 model = "/mnt/shared/squad2/projects/asr4models/wav2vec_small_10m.static.10s.onnx"
 vocabulary = "/mnt/shared/squad2/projects/asr4models/wav2vec_small_10m.dynamic.uint8.dict.ltr.txt"
