Add default no use of GPU

--- a/asr4_streaming_config_en-us.toml
+++ b/asr4_streaming_config_en-us.toml
@@ -1,5 +1,6 @@
 [global]
 language = "en-US"
+gpu = false
 model = "w2v-en-us-1.4.0.onnx"
 vocabulary = "w2v-en-us-1.4.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
