--- a/asr4_streaming_config_es.toml
+++ b/asr4_streaming_config_es.toml
@@ -1,5 +1,6 @@
 [global]
 language = "es"
+gpu = false
 model = "w2v-es-1.4.0.onnx"
 vocabulary = "w2v-es-1.4.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
