--- a/asr4_streaming_config_pt-br.toml
+++ b/asr4_streaming_config_pt-br.toml
@@ -1,5 +1,6 @@
 [global]
 language = "pt-BR"
+gpu = false
 model = "w2v-pt-br-1.4.0.onnx"
 vocabulary = "w2v-pt-br-1.4.0.dict.ltr.txt"
 lm_algorithm = "kenlm"
