--- a/asr4_streaming_config_pt-br.toml
+++ b/asr4_streaming_config_pt-br.toml
@@ -7,8 +7,9 @@ lm_algorithm = "kenlm"
 lm_model = "w2v-pt-br-lm-1.2.0.bin"
 lexicon = "w2v-pt-br-lm-1.2.0.lexicon.txt"
 decoding_type = "LOCAL"
-listeners = 1
-workers = 2
+workers = 8
+listeners = 2
+servers = 1
 verbose = "INFO"
 host = "[::]"
 port = 50051
