--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -21,6 +21,7 @@ COPY asr4-$LANGUAGE-lm-$LM_VERSION.bin /w2v-$LANGUAGE-lm-$LM_VERSION.bin
 COPY asr4-$LANGUAGE-lm-$LM_VERSION.lexicon.txt /w2v-$LANGUAGE-lm-$LM_VERSION.lexicon.txt
 COPY asr4_streaming_config_$LANGUAGE.toml /
 
+RUN pip config set global.extra-index-url https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/simple/
 RUN pip install asr4_streaming-$VERSION-py3-none-any.whl[server,cpu]
 RUN python -m pip install intel_extension_for_pytorch -f https://software.intel.com/ipex-whl-stable-cpu
 RUN python -m pip uninstall cmake ninja -y
