--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y libgomp1 && apt-get clean
 
 ARG VERSION
 COPY asr4_streaming-$VERSION-py3-none-any.whl /asr4_streaming-$VERSION-py3-none-any.whl
+RUN pip config set global.extra-index-url https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/simple/
 RUN python -m pip install --no-cache-dir asr4_streaming-$VERSION-py3-none-any.whl[server,gpu]
 RUN python -m pip uninstall cmake ninja -y && pip cache purge && rm /tmp/*
 
