--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ version = {file = ["VERSION"]}
 
 [project.optional-dependencies]
 client = [
+    "asr4-engine == 1.0.0",
     "numpy >= 1.21.4",
     "pause >= 0.3",
     "toml",
@@ -59,8 +60,7 @@ client = [
     "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/f8d8063889d24bdd07edfae5e5c189f5dbb26c38f3c8ab2d76c4268d149f6cc7/csr_evaluation_tools-0.0.22-py37-none-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/734c88c08f37f4bcc0d85121fd6bbb1badc2bcd54b24f5d7d9ffe8dbecffa1bd/csr_evaluation_tools-0.0.22-py38-none-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
     "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/80e98be34e5798c3c2ac410b1f9696216aaed413cda01213c5a207b286317d6b/csr_evaluation_tools-0.0.22-py39-none-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/0f6bbb9642c692941c7e6e4de52c9d356bcf090f2d4eb17a6c3e63f09c9a1396/csr_evaluation_tools-0.0.22-py310-none-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
-    "asr4-engine @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/cb891000b9e9a4dd16a0835b09b77f44a6b32fbbd24d03ff37a7c550ac61bfec/asr4_engine-1.0.0-py3-none-any.whl"
+    "csr-evaluation-tools @ https://asr4:glpat-VkJr-mymfHB2P8GrLzvb@gitlab.lan.verbio.com/api/v4/projects/1420/packages/pypi/files/0f6bbb9642c692941c7e6e4de52c9d356bcf090f2d4eb17a6c3e63f09c9a1396/csr_evaluation_tools-0.0.22-py310-none-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'"
 ]
 server = [
     "toml >= 0.10.2",
@@ -70,10 +70,10 @@ server = [
     "grpcio-health-checking == 1.59.0",
 ]
 cpu = [
-    "asr4-engine-wav2vec[cpu,decoder,formatter] @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/2aafeb85a9eb66a4fb3e556735c779b9fb6dbfa095fe159ddcfb30f639d83c85/asr4_engine_wav2vec-1.0.1-py3-none-any.whl"
+    "asr4-engine-wav2vec[cpu,decoder,formatter] == 1.0.1"
 ]
 gpu = [
-    "asr4-engine-wav2vec[gpu,decoder,formatter] @ https://__token__:glpat-REETc2aBAZBgzuD5hu2j@gitlab.lan.verbio.com/api/v4/projects/1560/packages/pypi/files/2aafeb85a9eb66a4fb3e556735c779b9fb6dbfa095fe159ddcfb30f639d83c85/asr4_engine_wav2vec-1.0.1-py3-none-any.whl"
+    "asr4-engine-wav2vec[gpu,decoder,formatter] == 1.0.1"
 ]
 test = [
     "pytest >= 6.2.5",
