Update toml files for using 3s models and local formatting algorithm.

--- a/asr4_streaming_config_es.toml
+++ b/asr4_streaming_config_es.toml
@@ -19,4 +19,8 @@ lm_version = "1.2.0"
 lm_weight = "0.91447"
 word_score = "-0.56194"
 sil_score = "0.44272"
+local_formatting = "true"
+zero_padding = "true"
+overlap = "65"
+stride = "32"
 formatter = "format-model.es.fm"
