--- a/asr4_streaming_config_en-us.toml
+++ b/asr4_streaming_config_en-us.toml
@@ -19,4 +19,8 @@ lm_version = "1.2.0"
 lm_weight = "0.91715"
 word_score = "-0.29761"
 sil_score = "0.31423"
+local_formatting = "true"
+zero_padding = "true"
+overlap = "65"
+stride = "32"
 formatter = "format-model.en-us.fm"
