--- a/asr4_streaming_config_pt-br.toml
+++ b/asr4_streaming_config_pt-br.toml
@@ -19,4 +19,8 @@ lm_version = "1.2.0"
 lm_weight = "1.0"
 word_score = "-0.25422"
 sil_score = "0.24403"
+local_formatting = "true"
+zero_padding = "true"
+overlap = "65"
+stride = "32"
 formatter = "format-model.pt-br.fm"
