--- a/asr4_streaming_config_en-us.toml
+++ b/asr4_streaming_config_en-us.toml
@@ -7,9 +7,7 @@ lm_algorithm = "kenlm"
 lm_model = "w2v-en-us-lm-1.2.0.bin"
 lexicon = "w2v-en-us-lm-1.2.0.lexicon.txt"
 decoding_type = "LOCAL"
-workers = 4
-listeners = 1
-servers = 1
+jobs = 8
 verbose = "INFO"
 host = "[::]"
 port = 50051
