--- a/asr4_streaming_config_es.toml
+++ b/asr4_streaming_config_es.toml
@@ -7,7 +7,7 @@ lm_algorithm = "kenlm"
 lm_model = "w2v-es-lm-1.2.0.bin"
 lexicon = "w2v-es-lm-1.2.0.lexicon.txt"
 decoding_type = "LOCAL"
-workers = 0
+servers = 3
 verbose = "INFO"
 host = "[::]"
 port = 50051
