--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ client = [
 server = [
     "toml >= 0.10.2",
     "soxr >= 0.3.3",
-    "sox >= 1.4.1",
+    "sox == 1.4.*",
     "scipy >= 1.10.0",
     "grpcio-health-checking == 1.59.0",
 ]
