Debug: Changin server parameter to debug memory problem

--- a/asr4_streaming_config_es.toml
+++ b/asr4_streaming_config_es.toml
@@ -7,7 +7,9 @@ lm_algorithm = "kenlm"
 lm_model = "w2v-es-lm-1.2.0.bin"
 lexicon = "w2v-es-lm-1.2.0.lexicon.txt"
 decoding_type = "LOCAL"
-servers = 3
+workers = 0
+listeners = 1
+servers = 1
 verbose = "INFO"
 host = "[::]"
 port = 50051
