--- a/asr4_streaming_config_pt-br.toml
+++ b/asr4_streaming_config_pt-br.toml
@@ -7,7 +7,9 @@ lm_algorithm = "kenlm"
 lm_model = "w2v-pt-br-lm-1.3.0.bin"
 lexicon = "w2v-pt-br-lm-1.3.0.lexicon.txt"
 decoding_type = "LOCAL"
-servers = 3
+workers = 0
+listeners = 1
+servers = 1
 verbose = "INFO"
 host = "[::]"
 port = 50051
