--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,10 +70,10 @@ server = [
     "grpcio-health-checking == 1.59.0",
 ]
 cpu = [
-    "asr4-engine-wav2vec[cpu,decoder,formatter] == 1.0.*"
+    "asr4-engine-wav2vec[cpu,decoder,formatter] == 1.0.5"
 ]
 gpu = [
-    "asr4-engine-wav2vec[gpu,decoder,formatter] == 1.0.*"
+    "asr4-engine-wav2vec[gpu,decoder,formatter] == 1.0.5"
 ]
 test = [
     "pytest >= 6.2.5",
