--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,19 +2,19 @@ include:
   remote: 'https://gitlab.com/gitlab-org/gitlab/-/raw/2851f4d5/lib/gitlab/ci/templates/Jobs/SAST.latest.gitlab-ci.yml'
 
 stages:
-  - test
-  - unit-tests
-  - functional-tests
-  - integration-tests
+  #- test
+  #- unit-tests
+  #- functional-tests
+  #- integration-tests
   - build-package
   - build-image
-  - integration-tests-with-docker
+  #- integration-tests-with-docker
   - promote-to-staging
-  - end2end-testing
-  - update-changelog
+  #- end2end-testing
+  #- update-changelog
   - promote-to-stable
   - cleanup
-  - speech-center-integration-testing
+  #- speech-center-integration-testing
 
 image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:1.11.7
 
@@ -30,6 +30,7 @@ variables:
   AWS_SC_REGION: us-east-2
   AWS_ECR_URL: 321880733545.dkr.ecr.us-east-1.amazonaws.com
   SPEECH_CENTER_AWS_ECR_URL: 321880733545.dkr.ecr.us-east-2.amazonaws.com
+  AWS_ACCOUNT_ID_ECR: 321880733545
 
 
 .install-python:
@@ -61,118 +62,118 @@ lint:python:
     - flake8 --exit-zero --show-source --statistics
 
 
-unit-testing:
-  stage: unit-tests
-  rules:
-    - when: always
-  before_script:
-    - !reference [.install-python, before_script]
-    - pip install .[client,server,cpu,test]
-  script:
-    - python3 --version
-    - pytest tests/unit --junit-xml=report.xml --cov=asr4_streaming --cov-config=.coveragerc --cov-report=html:coverage --cov-report=term --verbose
-  artifacts:
-    expire_in: 5 days
-    reports:
-      junit: report.xml
-    paths:
-      - coverage/**
-  coverage: '/^TOTAL\s+\d+\s+\d+\s+(\d+\.?\d*)\%$/'
+#unit-testing:
+#  stage: unit-tests
+#  rules:
+#    - when: always
+#  before_script:
+#    - !reference [.install-python, before_script]
+#    - pip install .[client,server,cpu,test]
+#  script:
+#    - python3 --version
+#    - pytest tests/unit --junit-xml=report.xml --cov=asr4_streaming --cov-config=.coveragerc --cov-report=html:coverage --cov-report=term --verbose
+#  artifacts:
+#    expire_in: 5 days
+#    reports:
+#      junit: report.xml
+#    paths:
+#      - coverage/**
+#  coverage: '/^TOTAL\s+\d+\s+\d+\s+(\d+\.?\d*)\%$/'
+#
+#
+#functional-testing:
+#  stage: functional-tests
+#  needs: ["unit-testing"]
+#  only:
+#    - tags
+#    - merge_requests
+#    - master
+#    - web
+#  before_script:
+#    - !reference [.install-python, before_script]
+#    - pip install .[server,cpu,test]
+#  script:
+#    - pytest tests/functional --junit-xml=report.xml --verbose
+
+#
+#functional-testing:long-audios:
+#  stage: functional-tests
+#  needs: ["unit-testing"]
+#  image: docker.registry.verbio.com/csr/devops/asr4-base-gpu:latest
+#  tags:
+#    - gpu
+#  only:
+#    - tags
+#    - merge_requests
+#    - master
+#    - web
+#  before_script:
+#    - !reference [.install-python, before_script]
+#    - pip install .[server,gpu,test]
+#  script:
+#    - export W2V_GPU=true
+#    - pytest tests/functional/test_streaming_requests.py --verbose
+#    - pytest tests/functional/test_long_files.py --verbose
 
 
-functional-testing:
-  stage: functional-tests
-  needs: ["unit-testing"]
-  only:
-    - tags
-    - merge_requests
-    - master
-    - web
-  before_script:
-    - !reference [.install-python, before_script]
-    - pip install .[server,cpu,test]
-  script:
-    - pytest tests/functional --junit-xml=report.xml --verbose
+#functional-testing:e2e:
+#  stage: functional-tests
+#  needs: ["unit-testing"]
+#  only:
+#    - tags
+#    - merge_requests
+#    - master
+#    - web
+#  before_script:
+#    - python -m venv venv-server
+#    - . ./venv-server/bin/activate
+#    - !reference [.install-python, before_script]
+#    - pip install .[server,cpu]
+#    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml
+#  script:
+#    - apt-get -y -q update && apt-get install -y asrtest-eval
+#    - deactivate
+#    - python -m venv venv-client
+#    - . ./venv-client/bin/activate
+#    - pip install .[client]
+#    - ./tests/e2e/run_metrics.sh en-us 0.0.0.0:50051 tests/e2e/data/test_en-us_upgraded-small.gui tests/e2e/data/expected_metrics_functional_testing.json
 
 
-functional-testing:long-audios:
-  stage: functional-tests
-  needs: ["unit-testing"]
-  image: docker.registry.verbio.com/csr/devops/asr4-base-gpu:latest
-  tags:
-    - gpu
-  only:
-    - tags
-    - merge_requests
-    - master
-    - web
-  before_script:
-    - !reference [.install-python, before_script]
-    - pip install .[server,gpu,test]
-  script:
-    - export W2V_GPU=true
-    - pytest tests/functional/test_streaming_requests.py --verbose
-    - pytest tests/functional/test_long_files.py --verbose
+#integration-testing:cpu:
+#  stage: integration-tests
+#  needs: ["unit-testing"]
+#  only:
+#    - tags
+#    - merge_requests
+#    - web
+#    - master
+#  parallel:
+#    matrix:
+#      - LANGUAGE: [en-us, es, pt-br]
+#  before_script:
+#    - !reference [.install-python, before_script]
+#    - pip install .[client,server,cpu,test]
+#    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_${LANGUAGE}.toml 0
+#    - apt-get update && apt-get install -y asrtest-eval libffi-dev
+#  script:
+#    - pytest tests/integration -rA --junit-xml=report.xml --verbose --capture=no
 
 
-functional-testing:e2e:
-  stage: functional-tests
-  needs: ["unit-testing"]
-  only:
-    - tags
-    - merge_requests
-    - master
-    - web
-  before_script:
-    - python -m venv venv-server
-    - . ./venv-server/bin/activate
-    - !reference [.install-python, before_script]
-    - pip install .[server,cpu]
-    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_en-us.toml
-  script:
-    - apt-get -y -q update && apt-get install -y asrtest-eval
-    - deactivate
-    - python -m venv venv-client
-    - . ./venv-client/bin/activate
-    - pip install .[client]
-    - ./tests/e2e/run_metrics.sh en-us 0.0.0.0:50051 tests/e2e/data/test_en-us_upgraded-small.gui tests/e2e/data/expected_metrics_functional_testing.json
-
-
-integration-testing:cpu:
-  stage: integration-tests
-  needs: ["unit-testing"]
-  only:
-    - tags
-    - merge_requests
-    - web
-    - master
-  parallel:
-    matrix:
-      - LANGUAGE: [en-us, es, pt-br]
-  before_script:
-    - !reference [.install-python, before_script]
-    - pip install .[client,server,cpu,test]
-    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_${LANGUAGE}.toml 0
-    - apt-get update && apt-get install -y asrtest-eval libffi-dev
-  script:
-    - pytest tests/integration -rA --junit-xml=report.xml --verbose --capture=no
-
-
-integration-testing:gpu:
-  extends: integration-testing:cpu
-  image: docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
-  tags:
-    - gpu
-  before_script:
-    - . /opt/intel/oneapi/setvars.sh
-    - !reference [.install-python, before_script]
-    - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/intelpython/python3.9/lib/ -liomp5" pip install .[client,server,gpu,test]
-    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_${LANGUAGE}.toml 1
-    - wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | apt-key add -
-    - echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie stable' | tee /etc/apt/sources.list.d/verbio-internal.list
-    - apt-get update && apt-get install -y asrtest-eval libffi-dev
-  script:
-    - pytest tests/integration -rA --junit-xml=report.xml --verbose --capture=no
+#integration-testing:gpu:
+#  extends: integration-testing:cpu
+#  image: docker.registry.verbio.com/engineering/devops/debian10-intel-oneapi-python-cuda-tensorrt:3.9
+#  tags:
+#    - gpu
+#  before_script:
+#    - . /opt/intel/oneapi/setvars.sh
+#    - !reference [.install-python, before_script]
+#    - CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/intelpython/python3.9/lib/ -liomp5" pip install .[client,server,gpu,test]
+#    - bash tests/integration/launch_server.sh tests/integration/data/asr4_streaming_config_${LANGUAGE}.toml 1
+#    - wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | apt-key add -
+#    - echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie stable' | tee /etc/apt/sources.list.d/verbio-internal.list
+#    - apt-get update && apt-get install -y asrtest-eval libffi-dev
+#  script:
+#    - pytest tests/integration -rA --junit-xml=report.xml --verbose --capture=no
 
 
 build-package:python:
@@ -279,18 +280,18 @@ build-image:release:gpu:
       - docker push "${IMAGE_NAME}"
       - docker pull "${IMAGE_NAME}"
     
-
-testing:integration-tests-with-docker:cpu:
-  extends: .template:integration-testing-docker
-  variables:
-    DEVICE: "cpu"
-
-testing:integration-tests-with-docker:gpu:
-  extends: .template:integration-testing-docker
-  variables:
-    DEVICE: "gpu"
-  tags:
-    - gpu
+#
+#testing:integration-tests-with-docker:cpu:
+#  extends: .template:integration-testing-docker
+#  variables:
+#    DEVICE: "cpu"
+#
+#testing:integration-tests-with-docker:gpu:
+#  extends: .template:integration-testing-docker
+#  variables:
+#    DEVICE: "gpu"
+#  tags:
+#    - gpu
 
 .template:integration-testing-docker:
   stage: integration-tests-with-docker
@@ -351,6 +352,11 @@ staging:promote:
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
+  before_script:
+    - export SCRIPTS_DIR=$(mktemp -d)
+    - git clone -q "$SCRIPTS_REPO" "$SCRIPTS_DIR"
+    - cd "$SCRIPTS_DIR"
+    - checkout chore/update-upload-script
   script:
     - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - NEW_CPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
@@ -361,34 +367,37 @@ staging:promote:
     - docker tag $OLD_NAME $NEW_GPU_NAME
     - docker push $NEW_GPU_NAME
     - echo "Push to Amazon"
-    - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_REGION}" "${AWS_ECR_URL}" "${DOCKER_TESTING_IMAGE_NAME}" "${LANGUAGE}"
+    #- export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_DEV} AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_DEV} AWS_REGION=${AWS_REGION}
+    - sh create_ecr_repository.sh "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}"
+    - sh create_ecr_repository.sh "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}"
+    #- sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_REGION}" "${AWS_ECR_URL}" "${DOCKER_TESTING_IMAGE_NAME}" "${LANGUAGE}"
     - docker tag $NEW_CPU_NAME "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker push "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $NEW_GPU_NAME "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker push "${AWS_ECR_URL}/${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
 
 
-asr4:benchmark:
-  stage: end2end-testing
-  only:
-    - tags
-  variables:
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TF_VAR_asr4_version: ${CI_COMMIT_TAG}
-  trigger:
-    project: csr/asr4-benchmark
-    strategy: depend
+#asr4:benchmark:
+#  stage: end2end-testing
+#  only:
+#    - tags
+#  variables:
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TF_VAR_asr4_version: ${CI_COMMIT_TAG}
+#  trigger:
+#    project: csr/asr4-benchmark
+#    strategy: depend
 
 
-update-changelog:
-  stage: update-changelog
-  image: docker.registry.verbio.com/engineering/devops/debian10-citbx:latest
-  only:
-    - tags
-  except:
-    - branches
-  script:
-    - citbx create release --private-token ${PRIVATE_TOKEN} --project-id ${CI_PROJECT_ID} --branch ${CI_DEFAULT_BRANCH} --no-manual-review --manual-version ${CI_COMMIT_TAG}
+#update-changelog:
+#  stage: update-changelog
+#  image: docker.registry.verbio.com/engineering/devops/debian10-citbx:latest
+#  only:
+#    - tags
+#  except:
+#    - branches
+#  script:
+#    - citbx create release --private-token ${PRIVATE_TOKEN} --project-id ${CI_PROJECT_ID} --branch ${CI_DEFAULT_BRANCH} --no-manual-review --manual-version ${CI_COMMIT_TAG}
 
 
 stable:promote:
@@ -418,6 +427,10 @@ speech-center:promote:
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
+  before_script:
+    - export SCRIPTS_DIR=$(mktemp -d)
+    - git clone -q "$SCRIPTS_REPO" "$SCRIPTS_DIR"
+    - cd "$SCRIPTS_DIR"
   script:
     - OLD_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - NEW_CPU_NAME="${VERBIO_REGISTRY_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
@@ -434,7 +447,9 @@ speech-center:promote:
     - docker push $NEW_GPU_NAME
     - docker push $NEW_LATEST_NAME
     - echo "Push to Amazon"
-    - sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_SC_REGION}" "${SPEECH_CENTER_AWS_ECR_URL}" "${DOCKER_SPEECH_CENTER_IMAGE_NAME}" "${LANGUAGE}"
+    - sh create_ecr_repository.sh "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}"
+    - sh create_ecr_repository.sh "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}"
+    #- sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_SC_REGION}" "${SPEECH_CENTER_AWS_ECR_URL}" "${DOCKER_SPEECH_CENTER_IMAGE_NAME}" "${LANGUAGE}"
     - docker tag $NEW_CPU_NAME "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker push "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $NEW_GPU_NAME "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
@@ -452,52 +467,52 @@ cleanup:
     - docker images --filter "label=service=asr4-batch" --filter "label=pipeline=${CI_PIPELINE_IID}" -q | xargs -r docker image rm --force
 
 
-speech-center-integration-testing:en-us:cpu:
-  variables:
-    TEST_SERVICE_NAME: "asr4-en-us"
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
-  extends: .template:speech-center-integration-testing
-
-speech-center-integration-testing:es:cpu:
-  variables:
-    TEST_SERVICE_NAME: "asr4-es"
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
-  extends: .template:speech-center-integration-testing
-
-speech-center-integration-testing:pt-br:cpu:
-  variables:
-    TEST_SERVICE_NAME: "asr4-pt-br"
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
-  extends: .template:speech-center-integration-testing
-
-speech-center-integration-testing:en-us:gpu:
-  variables:
-    TEST_SERVICE_NAME: "asr4-gpu-en-us"
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
-  extends: .template:speech-center-integration-testing
-
-speech-center-integration-testing:es:gpu:
-  variables:
-    TEST_SERVICE_NAME: "asr4-gpu-es"
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
-  extends: .template:speech-center-integration-testing
-
-speech-center-integration-testing:pt-br:gpu:
-  variables:
-    TEST_SERVICE_NAME: "asr4-gpu-pt-br"
-    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
-    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
-  extends: .template:speech-center-integration-testing
-
-.template:speech-center-integration-testing:
-  stage: speech-center-integration-testing
-  only:
-    - tags
-  trigger:
-    project: voice-center/operations/integration/integration-tests
-    strategy: depend
+#speech-center-integration-testing:en-us:cpu:
+#  variables:
+#    TEST_SERVICE_NAME: "asr4-en-us"
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
+#  extends: .template:speech-center-integration-testing
+#
+#speech-center-integration-testing:es:cpu:
+#  variables:
+#    TEST_SERVICE_NAME: "asr4-es"
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
+#  extends: .template:speech-center-integration-testing
+#
+#speech-center-integration-testing:pt-br:cpu:
+#  variables:
+#    TEST_SERVICE_NAME: "asr4-pt-br"
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
+#  extends: .template:speech-center-integration-testing
+#
+#speech-center-integration-testing:en-us:gpu:
+#  variables:
+#    TEST_SERVICE_NAME: "asr4-gpu-en-us"
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
+#  extends: .template:speech-center-integration-testing
+#
+#speech-center-integration-testing:es:gpu:
+#  variables:
+#    TEST_SERVICE_NAME: "asr4-gpu-es"
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
+#  extends: .template:speech-center-integration-testing
+#
+#speech-center-integration-testing:pt-br:gpu:
+#  variables:
+#    TEST_SERVICE_NAME: "asr4-gpu-pt-br"
+#    # A Gitlab bug requires this variable to be CI_COMMIT_TAG instead of DOCKER_IMAGE_VERSION
+#    TEST_SERVICE_COMMIT_TAG: ${CI_COMMIT_TAG}
+#  extends: .template:speech-center-integration-testing
+#
+#.template:speech-center-integration-testing:
+#  stage: speech-center-integration-testing
+#  only:
+#    - tags
+#  trigger:
+#    project: voice-center/operations/integration/integration-tests
+#    strategy: depend
