--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -452,6 +452,7 @@ speech-center:promote:
     - sh create_ecr_repository.sh "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}" ECS-AssumeRole-Squad2
     - sh create_ecr_repository.sh "${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}" ECS-AssumeRole-Squad2
     #- sh deploy/docker/amazon_login.sh "${AWS_ACCESS_KEY_ID}" "${AWS_SECRET_ACCESS_KEY}" "${AWS_SC_REGION}" "${SPEECH_CENTER_AWS_ECR_URL}" "${DOCKER_SPEECH_CENTER_IMAGE_NAME}" "${LANGUAGE}"
+    - export AWS_REGION="${AWS_SC_REGION}"
     - docker tag $NEW_CPU_NAME "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker push "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - docker tag $NEW_GPU_NAME "${SPEECH_CENTER_AWS_ECR_URL}/${DOCKER_SPEECH_CENTER_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
