--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.9, 3.11]
 
     steps:
       - uses: actions/checkout@v2
@@ -27,11 +27,13 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. 
           flake8 . --count --exit-zero --max-complexity=10  --statistics
-      - name: gRPC code generation
+      - name: Install buf
+        uses: bufbuild/buf-setup-action@v1.50.0
+        with:
+          version: "1.64.0"
+      - name: gRPC proto definitions compilation
         run: |
-          cd scripts
-          ./generate_grpc_code.sh
-          cd ..
+          buf generate
       - name: Unit tests
         run: |
           cd test
@@ -39,8 +41,6 @@ jobs:
           cd ..
       - name: Execute client help
         run: |
-          cd scripts
-          ./generate_grpc_code.sh
-          cd ../cli-client
-          ./recognizer_stream.py --help
-          ./synthesizer_stream.py --help
+          cd cli-client
+          python recognizer_stream.py --help
+          python synthesizer_stream.py --help
